# SWESemesterProject

./: CMakeLists.txt  README.md  periodData.csv  uterusdata.session.sql
backend/: CycleMath.cpp  CycleMath.h  Users.cpp  Users.h  database.cpp  database.h  main.cpp  setup.sql  utilities.cpp  utilities.h
frontend/uter-us/: package-lock.json  package.json
frontend/uter-us/src/: index.css
uter-us-frontend/: .gitignore  App.tsx  app.json  config.ts  package-lock.json  package.json  tsconfig.json  types.ts
uter-us-frontend/app/: _layout.tsx  index.tsx
uter-us-frontend/app/(tabs)/: _layout.tsx  acc_details.tsx  acc_purpose.tsx  buddy.tsx  dashboard.css  dashboard.tsx  index.tsx  settings.tsx
uter-us-frontend/app/createProfile/: _layout.tsx  acc_details.tsx  acc_purpose.tsx  comp_name.tsx  select_profile.tsx
uter-us-frontend/components/: themed-text.tsx
uter-us-frontend/screens/: acc_details.tsx  acc_purpose.tsx  comp_name.tsx  dashboard.tsx  profiles.tsx
